--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -2,11 +2,12 @@ body {
     background: #f3f3f3;
     color: rgb(119, 119, 119);
     cursor: default;
-    font-family: Lato, 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif,'Helvetica Neue', Arial, Helvetica;
     font-size: 13px;
     font-style: normal;
     font-weight: normal;
     line-height: 21px;
+
 }
 
 a {
