Make 1 element of feature-list. Try to use custom attributes in tiles.

--- a/src/components/tile-small/tile-small.css
+++ b/src/components/tile-small/tile-small.css
@@ -40,8 +40,7 @@
 	background: url(./images/eye.png);
 }
 
-.tile-small-hover span {
-	display: block;
+.tile-small-hover .tile-small-text {
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
