--- a/src/components/tile-large/tile-large.css
+++ b/src/components/tile-large/tile-large.css
@@ -40,8 +40,7 @@
 	background: url(./images/eye.png);
 }
 
-.tile-large-hover span {
-	display: block;
+.tile-large-hover .tile-large-text {
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
