--- a/src/components/tile-medium/tile-medium.css
+++ b/src/components/tile-medium/tile-medium.css
@@ -40,8 +40,7 @@
 	background: url(./images/eye.png);
 }
 
-.tile-medium-hover span {
-	display: block;
+.tile-medium-hover .tile-medium-text {
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
