--- a/src/components/motivation-info/motivation-info.css
+++ b/src/components/motivation-info/motivation-info.css
@@ -39,7 +39,76 @@
 	width: 100%;
 }
 
-.motivation-info .rearWindowLeft {
+.motivation-info .front-window {
+	position: absolute;
+	top: 0;
+	left: 300px;
+	height: 360px;
+	width: 570px;
+	background: #c1c7c8;
+	border-radius: 8px;
+}
+
+.motivation-info .front-window::before {
+	position: absolute;
+	left: 10px;
+	top: 16px;
+	content: '';
+	height: 12px;
+	width: 12px;
+	background-color: #ececec;
+	border-radius: 6px;
+	box-shadow: 20px 0 #ececec, 40px 0 #ececec;
+}
+
+.motivation-info .front-window::after {
+	position: absolute;
+	right: 19px;
+	top: 19px;
+	content: '';
+	height: 6px;
+	width: 12px;
+	background-color: #ececec;
+	border-radius: 3px;
+}
+
+.motivation-info .front-window.transformed-left {
+	position: absolute;
+	left: -99px;
+	transform: scale(0.65, 0.65);
+	background: #b0b8b9;
+}
+
+.motivation-info .front-window.transformed-right {
+	position: absolute;
+	left: 701px;
+	transform: scale(0.65, 0.65);
+	background: #b0b8b9;
+}
+
+.motivation-info img {
+	vertical-align: middle;
+	text-align: center;
+	position: absolute;
+	bottom: 4px;
+	left: 4px;
+	right: 4px;
+	margin: auto;
+	color: #ececec;
+	height: 310px;
+	width: 560px;
+	background: #7f8c8c;
+	border-radius: 6px;
+	box-shadow: none;
+	text-decoration: none;
+}
+
+.motivation-info .transformed-left img,
+.motivation-info .transformed-right img {
+	background: #62b9b0;
+}
+
+/*.motivation-info .rear-window-left {
 	position: absolute;
 	top: 60px;
 	left: 0;
@@ -47,9 +116,9 @@
 	width: 371px;
 	background: #b0b8b9;
 	border-radius: 8px;
-}
+}*/
 
-.motivation-info .rearWindowLeft::before {
+/*.motivation-info .rear-window-left::before {
 	position: absolute;
 	left: 10px;
 	top: 16px;
@@ -59,9 +128,9 @@
 	background-color: #ececec;
 	border-radius: 6px;
 	box-shadow: 20px 0 #ececec, 40px 0 #ececec;
-}
+}*/
 
-.motivation-info .rearWindowLeft::after {
+/*.motivation-info .rear-window-left::after {
 	position: absolute;
 	right: 19px;
 	top: 19px;
@@ -70,9 +139,9 @@
 	width: 12px;
 	background-color: #ececec;
 	border-radius: 3px;
-}
+}*/
 
-.motivation-info .rearWindowRigth {
+/*.motivation-info .rear-window-rigth {
 	position: absolute;
 	top: 60px;
 	right: 0;
@@ -80,9 +149,9 @@
 	width: 371px;
 	background: #b0b8b9;
 	border-radius: 8px;
-}
+}*/
 
-.motivation-info .rearWindowRigth::before {
+/*.motivation-info .rear-window-rigth::before {
 	position: absolute;
 	left: 10px;
 	top: 16px;
@@ -92,9 +161,9 @@
 	background-color: #ececec;
 	border-radius: 6px;
 	box-shadow: 20px 0 #ececec, 40px 0 #ececec;
-}
+}*/
 
-.motivation-info .rearWindowRigth::after {
+/*.motivation-info .rear-window-rigth::after {
 	position: absolute;
 	right: 19px;
 	top: 19px;
@@ -103,11 +172,5 @@
 	width: 12px;
 	background-color: #ececec;
 	border-radius: 3px;
-}
+}*/
 
-.motivation-info .rearWindowLeft.transformed {
-	position: absolute;
-	left: 33%;
-	transform: scale(2, 1.7);
-	background: #b0b8b9;
-}
