--- a/src/components/feature-item/feature-item.css
+++ b/src/components/feature-item/feature-item.css
@@ -2,7 +2,7 @@
 	padding: 0;
 	margin: 30px; /* used just for example in ui-kit.vue */
 	width: 270px;
-	background-color: white;
+	background-color: #f8f8f8;
 	display: inline-block;
 	vertical-align: top;
 	border-bottom: solid 4px #e5e6e6;
