--- a/src/components/breadcrumbs-navigation/breadcrumbs-navigation.css
+++ b/src/components/breadcrumbs-navigation/breadcrumbs-navigation.css
@@ -3,7 +3,8 @@ ul.br_crumb-nav {
     list-style: none;
     font-size: 12px;
     color: #7f8c8c;
-    font-family: 'Open Sans Semibold', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
 }
 
 ul.br_crumb-nav li {
