--- a/src/components/pagination-menu/pagination-menu.css
+++ b/src/components/pagination-menu/pagination-menu.css
@@ -7,8 +7,9 @@
 }
 
 .pagination .navlink {
-	font-family: sans-serif;
-	font-weight: bold;
+	font-family: 'Open Sans' ;
+	font-style: normal;
+    font-weight: 900;
 	font-size: 16px;
 	box-sizing: border-box;
 	display: inline-block;
