--- a/src/components/tag-item/tag-item.css
+++ b/src/components/tag-item/tag-item.css
@@ -5,6 +5,7 @@
 	border-bottom: 3px solid #7f8c8c;
 	border-radius: 4px;
 	display: inline-block;
+	margin-bottom: 37px;
 }
 
 .tag-item .item-menu:nth-child(-n+4) {
