link-external class name empty modification

--- a/src/components/link-external/link-external.css
+++ b/src/components/link-external/link-external.css
@@ -18,7 +18,7 @@
 
 .link-external::before {
 	content: '';
-	background: url(link-external-green.png);
+	background: url(link-external-green.png) no-repeat 0 0;
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -32,9 +32,9 @@
 
 .link-external:hover::before {
 	content: '';
-	background: url(link-external-red.png);
+	background: url(link-external-red.png) no-repeat 0 0;
 }
 
-.link-external:empty {
+.link-external.empty {
 	padding-left: 40px;
 }
