prepearing workspace for expandable box

--- a/src/components/expandable-box/expandable-box.css
+++ b/src/components/expandable-box/expandable-box.css
@@ -1,8 +1,59 @@
 .expandable-box {
 	position: relative;
-	height: 50px;
-	width: 870px;
+	display: inline-block;
+	vertical-align: top;
+	min-height: 50px;
+	height: auto;
+	min-width: 270px;
+	max-width: 870px;
+	width: auto;
 	background: #f8f8f8;
 	box-shadow: 0 4px 4px #e5e6e6;
 	border-radius: 5px;
+}
+
+.accordion-title {
+	position: absolute;
+	font-size: 16px;
+	line-height: 50px;
+	text-transform: uppercase;
+	left: 22px;
+	color: #7f8c8c;
+	font-weight: 900;
+}
+
+.text-message {
+	display: none;
+	position: relative;
+	top: 50px;
+	left: 22px;
+	font-size: 13px;
+	line-height: 1.6em;
+	height: 70px;
+	width: auto;
+}
+
+.expandable-box .text-message.shown {
+	display: initial;
+}
+
+.expandable-box::after {
+	content: '';
+	position: absolute;
+	right: 20px;
+	top: 18px;
+	background: url(expandable-box-plus.png) no-repeat 0 0;
+	height: 18px;
+	width: 18px;
+	border-radius: 9px;
+}
+
+.expandable-box:hover::after {
+	position: absolute;
+	right: 20px;
+	top: 18px;
+	background: url(expandable-box-minus.png) no-repeat 0 0;
+	height: 18px;
+	width: 18px;
+	border-radius: 9px;
 }
