--- a/src/components/expandable-box/expandable-box.css
+++ b/src/components/expandable-box/expandable-box.css
@@ -13,13 +13,15 @@
 }
 
 .accordion-title {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 800;
 	position: absolute;
 	font-size: 16px;
 	line-height: 50px;
 	text-transform: uppercase;
 	left: 22px;
 	color: #7f8c8c;
-	font-weight: 900;
 }
 
 .text-message {
