--- a/src/components/feature-item/feature-item.css
+++ b/src/components/feature-item/feature-item.css
@@ -26,8 +26,10 @@
 }
 
 .feature-item-content h4 {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 800;
 	font-size: 16px;
-	font-weight: 900;
 	text-transform: uppercase;
 	line-height: 19px;
 	margin-top: 10px;
