--- a/src/components/feedback-quote/feedback-quote.css
+++ b/src/components/feedback-quote/feedback-quote.css
@@ -25,6 +25,9 @@
 
 .feedback-quote dt {
     position: relative;
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 600;
     font-size: 16px;
     left: 9%;
     border: 0;
