--- a/src/components/pagination-menu/pagination-menu.css
+++ b/src/components/pagination-menu/pagination-menu.css
@@ -7,8 +7,9 @@
 }
 
 .pagination-menu .navlink {
-	font-family: sans-serif;
-	font-weight: bold;
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 800;
 	font-size: 16px;
 	box-sizing: border-box;
 	display: inline-block;
