--- a/src/components/teaser-item/teaser-item.css
+++ b/src/components/teaser-item/teaser-item.css
@@ -7,7 +7,16 @@
 	height: 140px;
 }
 
+.teaser-item > h4 {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 600;
+}
+
 .teaser-item > .link-external {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 600;
 	position: absolute;
 	left: 600px;
 }
