Changed font in the feature-item.

--- a/src/components/feature-item/feature-item.css
+++ b/src/components/feature-item/feature-item.css
@@ -34,3 +34,9 @@
 	line-height: 19px;
 	margin-top: 10px;
 }
+
+.button-control {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 600;
+}
