Changed font in the page-footer "Blog"

--- a/src/components/page-footer/page-footer.css
+++ b/src/components/page-footer/page-footer.css
@@ -151,6 +151,9 @@
 }
 
 .page-footer .blog {
+	  font-family: 'Open Sans';
+	  font-style: normal;
+	  font-weight: 700;
       position: absolute;
 	  left: 80px;
 }
