Changed the connection of fonts

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700);
-
 body {
     background: #f3f3f3;
     color: rgb(119, 119, 119);
@@ -10,6 +8,100 @@ body {
     font-weight: normal;
     line-height: 21px;
 }
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	src: local('OpenSansRegular'),
+	     url('/fonts/OpenSansRegular/OpenSansRegular.woff') format('woff'),
+	     url('/fonts/OpenSansRegular/OpenSansRegular.eot') format('eot'),
+		 url('/fonts/OpenSansRegular/OpenSansRegular.ttf') format('ttf');
+		 unicode-range: U+000-5FF; /* Latin glyphs */
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 600;
+	src: local('OpenSansSemiBold'),
+	     url('/fonts/OpenSansSemiBold/OpenSansSemiBold.woff') format('woff'),
+	     url('/fonts/OpenSansSemiBold/OpenSansSemiBold.eot') format('eot'),
+		 url('/fonts/OpenSansSemiBold/OpenSansSemiBold.ttf') format('ttf');
+		 unicode-range: U+000-5FF; /* Latin glyphs */
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 700;
+	src: local('OpenSansBold'),
+	     url('/fonts/OpenSansBold/OpenSansBold.woff') format('woff'),
+	     url('/fonts/OpenSansBold/OpenSansBold.eot') format('eot'),
+		 url('/fonts/OpenSansBold/OpenSansBold.ttf') format('ttf');
+		 unicode-range: U+000-5FF; /* Latin glyphs */
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 800;
+	src: local('OpenSansExtraBold'),
+	     url('/fonts/OpenSansExtraBold/OpenSansExtraBold.woff') format('woff'),
+	     url('/fonts/OpenSansExtraBold/OpenSansExtraBold.eot') format('eot'),
+		 url('/fonts/OpenSansExtraBold/OpenSansExtraBold.ttf') format('ttf');
+		 unicode-range: U+000-5FF; /* Latin glyphs */
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	src: local('OpenSansItalic'),
+	     url('/fonts/OpenSansItalic/OpenSansItalic.woff') format('woff'),
+	     url('/fonts/OpenSansItalic/OpenSansItalic.eot') format('eot'),
+		 url('/fonts/OpenSansItalic/OpenSansItalic.ttf') format('ttf');
+		 unicode-range: U+000-5FF; /* Latin glyphs */
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 600;
+	src: local('OpenSansSemiBoldItalic'),
+	     url('/fonts/OpenSansSemiBoldItalic/OpenSansSemiBoldItalic.woff') format('woff'),
+	     url('/fonts/OpenSansSemiBoldItalic/OpenSansSemiBoldItalic.eot') format('eot'),
+		 url('/fonts/OpenSansSemiBoldItalic/OpenSansSemiBoldItalic.ttf') format('ttf');
+		 unicode-range: U+000-5FF; /* Latin glyphs */
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 700;
+	src: local('OpenSansBoldItalic'),
+	      url('/fonts/OpenSansBoldItalic/OpenSansBoldItalic.woff') format('woff'),
+	     url('/fonts/OpenSansBoldItalic/OpenSansBoldItalic.eot') format('eot'),
+		 url('/fonts/OpenSansBoldItalic/OpenSansBoldItalic.ttf') format('ttf');
+		 unicode-range: U+000-5FF; /* Latin glyphs */
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 800;
+	src: local('OpenSansExtraBoldItalic'),
+	     url('/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic.woff') format('woff'),
+	     url('/fonts/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic.eot') format('eot'),
+		 url('/fonts/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic.ttf') format('ttf');
+		 unicode-range: U+000-5FF; /* Latin glyphs */
+}
+
+
+
+
+
+	
 
 a {
     color: #e1524b;
