--- a/src/components/data-table/data-table.css
+++ b/src/components/data-table/data-table.css
@@ -1,11 +1,10 @@
 .data-table {
 	background: #f8f8f8;
-	height: 212px;
-	width: 1170px;
+	height: auto;
+	width: auto;
 	border-radius: 5px;
 	border: none;
 	box-shadow: 0 4px #e5e6e6;
-	margin: 20px;
 }
 
 .data-table th {
@@ -13,7 +12,7 @@
 	font-size: 16px;
 	color: #7f8c8c;
 	background: #ececec;
-	padding: 5px 15px 5px 15px;
+	padding: 5px 15px;
 	box-shadow: 0 3px #e5e6e6;
 	border-right: 1px solid #ddd;
 	text-align: left;
@@ -29,12 +28,11 @@
 }
 
 .data-table td {
-	color: #777777;
+	color: #777;
 	font-size: 14px;
 	border-right: 1px solid #ddd;
 	border-bottom: 1px solid #e5e6e6;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding: 10px 15px;
 }
 
 .data-table td:last-of-type {
