--- a/src/components/main-menu/main-menu.css
+++ b/src/components/main-menu/main-menu.css
@@ -19,7 +19,7 @@
 		text-decoration: none;
 		text-transform: uppercase;
 		color: #fff;
-		padding: 2px 20px;
+		padding: 0 20px;
 		line-height: 30px;
 	}
 	
