--- a/src/components/image-content/image-content.css
+++ b/src/components/image-content/image-content.css
@@ -1,33 +1,23 @@
-.tile-large-content > .image-content {
-	position: absolute;
+.image-content {
+	position: relative;
 	display: block;
-	height: 270px;
-	width: 570px;
+	width: 100%;
+	height: 100%;
 	border-radius: 6px;
 	overflow: hidden;
-}
-
-.tile-medium-content > .image-content {
-}
-
-.tile-small-content > .image-content {
-}
-
-.tile-large-content:hover img,
-.tile-medium-content:hover img,
-.tile-small-content:hover img {
-	display: none;
+	text-align: left;
 }
 
 .image-content > img {
 	position: relative;
 	height: auto;
-	width: inherit;
+	width: 100%;
 	top: 50%;
 	transform: translateY(-50%);
 }
 
-.teaser-item > .image-content {
+
+/*.teaser-item > .image-content {
 	display: block;
 	float: left;
 	height: 270px;
@@ -36,16 +26,4 @@
 	overflow: hidden;
 	margin-right: 30px;
 	border-bottom: solid 3px #e5e6e6;
-}
-
-
-/* Почему не работает? */
-
-/* . image-content:hover {
-		visibility: hidden;
-	}
-
-	.content-image:hover {
-		visibility: hidden;
-	}
-*/
+}*/
