Fix blockquote(font size and indents)

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,99 +1,85 @@
 @font-face {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 400;
-	src: local('OpenSansRegular'),
-	     url('/fonts/OpenSansRegular/OpenSansRegular.woff') format('woff'),
-	     url('/fonts/OpenSansRegular/OpenSansRegular.ttf') format('ttf');
-		 unicode-range: U+000-5FF; /* Latin glyphs */
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('OpenSansRegular'), url('/fonts/OpenSansRegular/OpenSansRegular.woff') format('woff'), url('/fonts/OpenSansRegular/OpenSansRegular.ttf') format('ttf');
+    unicode-range: U+000-5FF;
+    /* Latin glyphs */
 }
 
 @font-face {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 600;
-	src: local('OpenSansSemiBold'),
-	     url('/fonts/OpenSansSemiBold/OpenSansSemiBold.woff') format('woff'),
-	     url('/fonts/OpenSansSemiBold/OpenSansSemiBold.ttf') format('ttf');
-		 unicode-range: U+000-5FF; /* Latin glyphs */
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: local('OpenSansSemiBold'), url('/fonts/OpenSansSemiBold/OpenSansSemiBold.woff') format('woff'), url('/fonts/OpenSansSemiBold/OpenSansSemiBold.ttf') format('ttf');
+    unicode-range: U+000-5FF;
+    /* Latin glyphs */
 }
 
 @font-face {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 700;
-	src: local('OpenSansBold'),
-	     url('/fonts/OpenSansBold/OpenSansBold.woff') format('woff'),
-	     url('/fonts/OpenSansBold/OpenSansBold.ttf') format('ttf');
-		 unicode-range: U+000-5FF; /* Latin glyphs */
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: local('OpenSansBold'), url('/fonts/OpenSansBold/OpenSansBold.woff') format('woff'), url('/fonts/OpenSansBold/OpenSansBold.ttf') format('ttf');
+    unicode-range: U+000-5FF;
+    /* Latin glyphs */
 }
 
 @font-face {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 800;
-	src: local('OpenSansExtraBold'),
-	     url('/fonts/OpenSansExtraBold/OpenSansExtraBold.woff') format('woff'),
-	     url('/fonts/OpenSansExtraBold/OpenSansExtraBold.ttf') format('ttf');
-		 unicode-range: U+000-5FF; /* Latin glyphs */
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 800;
+    src: local('OpenSansExtraBold'), url('/fonts/OpenSansExtraBold/OpenSansExtraBold.woff') format('woff'), url('/fonts/OpenSansExtraBold/OpenSansExtraBold.ttf') format('ttf');
+    unicode-range: U+000-5FF;
+    /* Latin glyphs */
 }
 
 @font-face {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 400;
-	src: local('OpenSansItalic'),
-	     url('/fonts/OpenSansItalic/OpenSansItalic.woff') format('woff'),
-	     url('/fonts/OpenSansItalic/OpenSansItalic.ttf') format('ttf');
-		 unicode-range: U+000-5FF; /* Latin glyphs */
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('OpenSansItalic'), url('/fonts/OpenSansItalic/OpenSansItalic.woff') format('woff'), url('/fonts/OpenSansItalic/OpenSansItalic.ttf') format('ttf');
+    unicode-range: U+000-5FF;
+    /* Latin glyphs */
 }
 
 @font-face {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 600;
-	src: local('OpenSansSemiBoldItalic'),
-	     url('/fonts/OpenSansSemiBoldItalic/OpenSansSemiBoldItalic.woff') format('woff'),
-	     url('/fonts/OpenSansSemiBoldItalic/OpenSansSemiBoldItalic.ttf') format('ttf');
-		 unicode-range: U+000-5FF; /* Latin glyphs */
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: local('OpenSansSemiBoldItalic'), url('/fonts/OpenSansSemiBoldItalic/OpenSansSemiBoldItalic.woff') format('woff'), url('/fonts/OpenSansSemiBoldItalic/OpenSansSemiBoldItalic.ttf') format('ttf');
+    unicode-range: U+000-5FF;
+    /* Latin glyphs */
 }
 
 @font-face {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 700;
-	src: local('OpenSansBoldItalic'),
-	     url('/fonts/OpenSansBoldItalic/OpenSansBoldItalic.woff') format('woff'),
-	     url('/fonts/OpenSansBoldItalic/OpenSansBoldItalic.ttf') format('ttf');
-		 unicode-range: U+000-5FF; /* Latin glyphs */
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: local('OpenSansBoldItalic'), url('/fonts/OpenSansBoldItalic/OpenSansBoldItalic.woff') format('woff'), url('/fonts/OpenSansBoldItalic/OpenSansBoldItalic.ttf') format('ttf');
+    unicode-range: U+000-5FF;
+    /* Latin glyphs */
 }
 
 @font-face {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 800;
-	src: local('OpenSansExtraBoldItalic'),
-	     url('/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic.woff') format('woff'),
-	     url('/fonts/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic.ttf') format('ttf');
-		 unicode-range: U+000-5FF; /* Latin glyphs */
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 800;
+    src: local('OpenSansExtraBoldItalic'), url('/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic.woff') format('woff'), url('/fonts/OpenSansExtraBoldItalic/OpenSansExtraBoldItalic.ttf') format('ttf');
+    unicode-range: U+000-5FF;
+    /* Latin glyphs */
 }
 
 body {
     background: #f3f3f3;
     color: rgb(119, 119, 119);
     cursor: default;
-    font-family: 'Open Sans', sans-serif,'PT Sans' , Helvetica , 'Roboto' , Arial;
-	font-size: 13px;
+    font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, 'Roboto', Arial;
+    font-size: 13px;
     font-style: normal;
     font-weight: normal;
     line-height: 21px;
 }
-
-
-
-
-
-	
 
 a {
     color: #e1524b;
@@ -107,7 +93,7 @@ a:hover {
 
 p {
     font-size: 14px;
-    font-family: 'Open Sans', sans-serif,'PT Sans' , Helvetica , 'Roboto' , Arial;
+    font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, 'Roboto', Arial;
     font-style: normal;
     color: #7f8c8c;
     line-height: 1.6em;
@@ -115,7 +101,7 @@ p {
 }
 
 h1 {
-    font-family: 'Open Sans', sans-serif,'PT Sans' , Helvetica , 'Roboto' , Arial;
+    font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, 'Roboto', Arial;
     font-weight: 600;
     font-size: 20pt;
     font-style: normal;
@@ -126,7 +112,7 @@ h1 {
 }
 
 h2 {
-    font-family: 'Open Sans', sans-serif,'PT Sans' , Helvetica , 'Roboto' , Arial;
+    font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, 'Roboto', Arial;
     font-weight: 600;
     font-size: 24pt;
     font-style: normal;
@@ -136,7 +122,7 @@ h2 {
 }
 
 h3 {
-    font-family: 'Open Sans', sans-serif,'PT Sans' , Helvetica , 'Roboto' , Arial;
+    font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, 'Roboto', Arial;
     font-weight: 700;
     font-size: 20pt;
     font-style: normal;
@@ -146,7 +132,7 @@ h3 {
 }
 
 h4 {
-    font-family: 'Open Sans', sans-serif,'PT Sans' , Helvetica , 'Roboto' , Arial;
+    font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, 'Roboto', Arial;
     font-weight: 600;
     font-size: 20pt;
     font-style: normal;
@@ -163,6 +149,7 @@ hr {
 
 blockquote {
     border-left: 5px solid #7f8c8c;
-    margin-right: 1.5em 25px;
-    padding: 1.5em 25px;
+    margin-left: 70px;
+    padding-left: 25px;
+    font-size: 14px;
 }
