--- a/src/components/input-email/input-email.css
+++ b/src/components/input-email/input-email.css
@@ -1,9 +1,11 @@
 .input-email {
 	background-color: #e5e6e6;
+	padding-left: 20px;
 	color: #879393;
 	width: 470px;
 	height: 40px;
 	border-radius: 4px;
 	border-left: 3px solid #d9dada;
 	border-top: 2px solid #d9dada;
+	outline: none;
 }
