--- a/src/components/input-multiline/input-multiline.css
+++ b/src/components/input-multiline/input-multiline.css
@@ -1,10 +1,11 @@
 .input-multiline {
+	padding-left: 20px;
 	background-color: #e5e6e6;
 	color: #879393;
 	width: 770px;
 	height: 240px;
 	border-radius: 4px;
-	border-left: 3px solid #d9dada;
-	border-top: 2px solid #d9dada;
 	resize: none;
+	box-shadow: inset 3px 2px 0 0 #d9dada;
+	border-style: none;
 }
