--- a/src/components/input-text/input-text.css
+++ b/src/components/input-text/input-text.css
@@ -1,11 +1,13 @@
 .input-text {
 	background-color: #e5e6e6;
+	padding-left: 20px;
 	color: #879393;
 	width: 470px;
 	height: 40px;
 	border-left: 3px solid #d9dada;
 	border-top: 2px solid #d9dada;
 	border-radius: 4px;
+	outline: none;
 }
 
 
