--- a/src/components/input-url/input-url.css
+++ b/src/components/input-url/input-url.css
@@ -1,9 +1,11 @@
 .input-url {
 	background-color: #e5e6e6;
+	padding-left: 20px;
 	color: #879393;
 	width: 470px;
 	height: 40px;
 	border-left: 3px solid #d9dada;
 	border-top: 2px solid #d9dada;
 	border-radius: 4px;
+	outline: none;
 }
